# qt-cmake-template

./: CMakeLists.txt  README.md  build.bat  build.sh  clean.bat
doc/: CMakeLists.txt.example  INSTALL-WINDOWS.md
src/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/mainwindow/: CMakeLists.txt  imageviewform.cpp  imageviewform.h  imageviewform.ui  main.cpp
src/gui/systemtray/: CMakeLists.txt  main.cpp  systray.qrc  window.cpp  window.h
src/mac/: CMakeLists.txt  Car.h  Car.mm  CocoaInitializer.h  CocoaInitializer.mm
